# motif-backend

./: .env.example  .gitignore  AUTH_SETUP.md  Cargo.toml  README.md
docs/: content-parser-real-site-intake-2026-04-05.md  content-parser-rebuild-plan.md
migrations/: 20260311173000_create_profiles.sql  20260315143000_create_content_schema.sql  20260315143000_create_saved_content.sql  20260315162000_rename_items_to_content.sql  20260317183000_add_content_processing_queue.sql  20260317183000_create_background_processing.sql  20260319193000_add_source_subscriptions.sql  20260319213000_refine_queue_retries_and_source_feeds.sql  20260320000000_create_recommendation_system.sql  20260320123000_optimize_recommendation_sql.sql  20260320124500_fix_rebuild_user_content_feedback.sql  20260320180000_add_topic_hierarchy.sql  20260320183000_add_public_topic_preview_and_backfill.sql  20260320194500_allow_save_source_refresh_trigger.sql  20260320200000_reschedule_source_refresh_cron.sql  20260320203000_add_source_quality_priors.sql  20260320213000_add_source_candidate_curation.sql  20260320230000_add_editorial_tags_to_source_curation.sql  20260402122000_fix_edge_function_trigger_headers.sql  20260404201500_dedupe_source_refresh_queue_and_restore_minute_cron.sql  20260405173000_add_content_parser_diagnostics.sql  20260405193000_add_content_fetch_revalidation.sql  20260405201500_add_content_parser_recovery.sql  20260405214500_add_content_recovery_processing.sql  20260405231500_add_rendered_content_recovery.sql  20260407120000_add_topic_filtered_device_recommendations.sql  (+1 more)
src/: auth.rs  (+14 more)
(+166 files in other folders)
