[package]
name = "motif-backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
axum = "0.8.8"
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy = "0.15"
tower-http = { version = "0.6.8", features = ["cors"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "macros",
  "any",
  "postgres",
  "json",
  "time",
  "uuid",
] }
uuid = { version = "1.18.1", features = ["serde"] }
url = "2.5.7"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
